@@ -185,7 +185,7 @@ public class ActionSiteGeneratorMojo extends AbstractCommandMojo {
 					.stream()
 					.filter(SemanticInfo.class::isInstance)
 					.map(SemanticInfo.class::cast)
-					.collect(Collectors.toList());
+					.toList();
 			}
 			
 			@Override
